<resources>
    <string name="app_name">ShopKaro</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAnyday</string>
    <string name="qulity">It is now very easy to reach the\nbest quality among the\nproducts on the internet!</string>
    <string name="start">start</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="google">Google</string>
</resources>