<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.LoginRegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/blury_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftTextture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftOfCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightOfCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />


        <TextView
            android:id="@+id/logo"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="textStart"
            android:drawableStart="@drawable/round_shopping_basket_24"
            android:drawablePadding="10dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/leftTextture"
            app:layout_constraintStart_toStartOf="@id/leftOfCircle" />

        <TextView
            android:id="@+id/heading"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/let_s_login"
            app:layout_constraintStart_toStartOf="@id/leftOfCircle"
            app:layout_constraintTop_toBottomOf="@id/logo" />
        <TextView
            android:id="@+id/message"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_register"
            app:layout_constraintStart_toStartOf="@id/leftOfCircle"
            app:layout_constraintTop_toBottomOf="@id/heading" />
        
        
        <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            android:hint="@string/email"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="@id/leftOfCircle"
            app:layout_constraintTop_toBottomOf="@id/message"
            app:layout_constraintEnd_toEndOf="@id/rightOfCircle"/>  
        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            android:hint="@string/password"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@id/leftOfCircle"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintEnd_toEndOf="@id/rightOfCircle"/>


        <TextView
            android:id="@+id/forgotPassword"
            style="@style/h2"
            android:layout_marginTop="5dp" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            app:layout_constraintStart_toStartOf="@id/leftOfCircle"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            style="@style/blueButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/mediumButtonHeight"
            android:text="@string/login"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@id/leftOfCircle"
            app:layout_constraintTop_toBottomOf="@id/forgotPassword"
            app:layout_constraintEnd_toEndOf="@id/rightOfCircle"/>
        
        
        <ImageView
            android:id="@+id/googleLogin"
            android:src="@drawable/google_login"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/smallButtonHeight"
            app:layout_constraintStart_toStartOf="@id/leftOfCircle"
            app:layout_constraintEnd_toEndOf="@id/rightOfCircle"
            app:layout_constraintTop_toBottomOf="@id/login"
            />

        <TextView
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"
            app:layout_constraintStart_toStartOf="@id/googleLogin"
            app:layout_constraintEnd_toEndOf="@id/rightOfCircle"
            app:layout_constraintBottom_toBottomOf="@id/googleLogin"
            app:layout_constraintTop_toTopOf="@id/googleLogin"/>
        

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>