<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.LoginRegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/blury_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftTextture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftOfCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightOfCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topOfCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.20" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomOfCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.60" />


        <TextView
            style="@style/h3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/topOfCircle" />

        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/heading"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rightAddress"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/rightOfCircle"
            app:layout_constraintStart_toStartOf="@id/leftOfCircle"
            app:layout_constraintTop_toTopOf="@id/topOfCircle" />

        <TextView
            android:id="@+id/qulity"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/qulity"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/rightOfCircle"
            app:layout_constraintStart_toStartOf="@id/leftOfCircle"
            app:layout_constraintTop_toBottomOf="@id/heading" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register"
            style="@style/blueButtonStyle"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/mediumButtonHeight"
            android:text="@string/register"
            app:layout_constraintBottom_toTopOf="@id/login"
            app:layout_constraintEnd_toEndOf="@id/rightOfCircle"
            app:layout_constraintStart_toStartOf="@id/leftOfCircle"
            app:layout_constraintTop_toBottomOf="@id/qulity" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            style="@style/whiteButtonStyle"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/mediumButtonHeight"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@id/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/rightOfCircle"
            app:layout_constraintStart_toStartOf="@id/leftOfCircle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>